# 15672_Real-Time-Graphics

./: README.md  log.txt  log_detail.txt
Cubes/: CMakeLists.txt  Cube.cpp  Cube.h  GGX.cpp  GGX.h  Lambertian.cpp  Lambertian.h  XZMath.cpp  XZMath.h  main.cpp
Submission/A1/animation/: RotatingSuzanne.Roof.b72  RotatingSuzanne.Suzanne.b72
Submission/A1/code/: FrustumCulling.cpp  FrustumCulling.h  Maekfile.js  RenderHelper.cpp  RenderHelper.h  S72Helper.cpp  S72Helper.h  VulkanHelper.cpp  VulkanHelper.h  XZJParser.cpp  XZMath.cpp  shader.frag  shader.vert
Submission/A1/report/: RotatingSuzanne.Icosphere.b72  RotatingSuzanne.Sphere.b72  RotatingSuzanne.blend  RotatingSuzanne.s72  report.html
Submission/A3/report/: Report.Cube.004.pnTtc.b72  Report.Sphere.011.pnc.b72  Report.Sphere.013.pnTtc.b72  Report.s72  report.html
Submission/A3/scene/: RotatingSuzanne.Cylinder.002.pnTtc.b72  RotatingSuzanne.Cylinder.pnTtc.b72  RotatingSuzanne.Mesh.001.pnTtc.b72  RotatingSuzanne.Mesh.003.pnTtc.b72  RotatingSuzanne.Sphere.pnTtc.b72  RotatingSuzanne.Suzanne.pnTtc.b72  RotatingSuzanne.pPlane1.pnTtc.b72  RotatingSuzanne.teleport.pnTtc.b72
Test_Program/TestProgram/: TestProgram.sln  TestProgram.vcxproj  TestProgram.vcxproj.filters  main.cpp
Test_Program/TestProgram/Shaders/: shader.frag  shader.vert
Test_Program/TestProgram_Clion/: CMakeLists.txt  XZMath.cpp  XZMath.h  main.cpp
XuanJamesZhai_A1/: CMakeLists.txt  EnvironmentMap.cpp  EnvironmentMap.h  EventHelper.cpp  EventHelper.h  FrustumCulling.cpp  FrustumCulling.h  RenderHelper.cpp  RenderHelper.h  S72Helper.cpp  S72Helper.h  S72Material_EnvMirror.cpp  S72Material_Lambertian.cpp  S72Material_PBR.cpp  S72Material_Simple.cpp  S72Materials.cpp  S72Materials.h  VkMaterial.cpp  VkMaterial.h  VkMaterial_EnvironmentMirror.cpp  VkMaterial_EnvironmentMirror.h  VkMaterial_Lambertian.cpp  VkMaterial_Lambertian.h  VkMaterial_PBR.cpp  VkMaterial_PBR.h  VkMaterial_Simple.cpp  VkMaterial_Simple.h  VkMesh.cpp  VkMesh.h  VkShadowMaps.cpp  VkShadowMaps.h  VulkanHelper.cpp  VulkanHelper.h  XZJParser.cpp  XZJParser.h  XZMath.cpp  XZMath.h  main.cpp
XuanJamesZhai_A1/spv/: shader.frag.spv  shader.vert.spv
